--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
   "name": "budget-book",
   "version": "0.0.0",
-  "description": "description",
-  "main": "src/app.js",
-  "dependencies": {
-    "nedb": "^1.2.1",
-    "node-jsx": "^0.13.3",
-    "node-schema-object": "^0.9.3",
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
-  },
-  "devDependencies": {},
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/www"
   },
+  "dependencies": {
+    "body-parser": "~1.13.2",
+    "cookie-parser": "~1.3.5",
+    "debug": "~2.2.0",
+    "express": "~4.13.1",
+    "express-handlebars": "^2.0.1",
+    "morgan": "~1.6.1",
+    "nedb": "^1.2.1",
+    "serve-favicon": "~2.3.0"
+  },
+  "description": "Test test",
+  "main": "node ./bin/www",
+  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fea17e86/budget-book.git"
   },
   "author": "fea17e86",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/fea17e86/budget-book/issues"
   },
