--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "gulp-if": "^2.0.0",
     "gulp-imagemin": "^2.3.0",
     "gulp-less": "^3.0.3",
+    "gulp-live-server": "0.0.29",
     "gulp-minify-css": "^1.2.1",
     "gulp-notify": "^2.2.0",
     "gulp-rename": "^1.2.2",
