--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   ],
   "main": "dist/client/index.html",
   "dependencies": {
+    "body-parser": "^1.14.1",
     "classnames": "^2.1.4",
     "express": "^4.13.3",
     "font-awesome": "^4.4.0",
