--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react": "^0.14.0-rc1",
     "react-dnd": "^1.1.8",
     "react-dom": "^0.14.0-rc1",
-    "react-router": "^1.0.0-rc1"
+    "react-router": "^1.0.0-rc1",
+    "whatwg-fetch": "^0.10.0"
   },
   "devDependencies": {
     "babel": "^5.8.23",
